<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_igneous_flow_chart"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="103"

    tools:context="com.example.ryanspc.geolbuddy.Igneous_flow_chart">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/questionPictureIg"
        android:src="@drawable/igbutton"
        android:layout_weight="30"
        android:scaleType="fitXY"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/descriptionIg"
        android:layout_weight="17"
        android:text="@string/igDefaultDesc"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="#000000"
        />

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:text="@string/Yes"
        android:id="@+id/yesButtonIg"
        android:textColor="#FFC702"
        android:background="#003cb3"
        android:textStyle="bold"
        android:textAllCaps="false"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="15"
        android:text="@string/No"
        android:id="@+id/noButtonIg"
        android:textColor="#FFC702"
        android:background="#003cb3"
        android:textStyle="bold"
        android:textAllCaps="false"/>

    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="10"
        android:weightSum="100">

        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="35"
            android:text="@string/Previous"
            android:id="@+id/backButtonIg"
            android:textColor="#FFC702"
            android:background="#003cb3"
            android:textStyle="bold"
            android:textAllCaps="false"/>
        <Space
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="30"/>
        <Button
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="35"
            android:text="@string/Restart"
            android:id="@+id/restartButtonIg"
            android:textColor="#FFC702"
            android:background="#003cb3"
            android:textStyle="bold"
            android:textAllCaps="false"/>

    </LinearLayout>


</LinearLayout>
