<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_home"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.example.ryanspc.geolbuddy.Home">

    <ImageView
        android:id="@+id/imageView"
        android:src="@drawable/titlepic"
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:scaleType="fitXY"
        android:layout_weight = "37"
        />
    <Space
        android:layout_height="0px"
        android:layout_width="match_parent"
        android:layout_weight="10"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:text="@string/flowchart"
        android:id="@+id/rockIdent"
        android:textAllCaps="false"
        android:layout_weight = "13"/>

    <Space
        android:layout_height="0px"
        android:layout_width="match_parent"
        android:layout_weight="1"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:text="@string/RockLookup"
        android:id="@+id/rockLookup"
        android:textAllCaps="false"
        android:enabled="false"
        android:layout_weight = "13"
        />
    <Space
        android:layout_height="0px"
        android:layout_width="match_parent"
        android:layout_weight="1"
        />
    <Button
        android:layout_width="match_parent"
        android:layout_height="0px"
        android:text = "@string/MineralLookup"
        android:id="@+id/mineralLookup"
        android:textAllCaps="false"
        android:layout_weight = "13"
        android:enabled="false"
        />

    <Space
        android:layout_height="0px"
        android:layout_width="match_parent"
        android:layout_weight="12"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="0px"
        android:text="About"
        android:id="@+id/aboutButton"
        android:textAllCaps="false"
        android:layout_weight = "8"
        />



</LinearLayout>
